added start quiz button function and setted up timer and questions functions

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <div id="question-container"></div>
             <div id="options-container"></div>
             <div id="result-container"></div>
+            <div id="correct-or-worng">
+                <p id="answer-feedback"></p>
+            </div>
         </section>
 
         <section id="score-container">
